Fix spacing on navigation elements
Closes https://github.com/4teamwork/plonetheme.blueberry/issues/109

--- a/plonetheme/blueberry/scss/site/navigation.scss
+++ b/plonetheme/blueberry/scss/site/navigation.scss
@@ -47,6 +47,14 @@
       border-bottom-color: $color-primary;
     }
 
+    &:first-child > a {
+      padding-left: $padding-horizontal / 2;
+    }
+
+    &:last-child > a {
+      padding-right: $padding-horizontal / 2;
+    }
+
     > a {
       @include no-link();
       font-size: $font-size-medium;
